table_3/results/Table-wrapper-csv-impl-post-nullaway-ngt.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableRow.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:44: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, null);
             ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:44: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, null);
                   ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:61: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return cell.getValue();
        ^
    (see http://t.uber.com/nullaway )
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 670ms
4
